@@ -1,3 +1,7 @@
+2014-10-07  Hani Benhabiles <hani.benhabiles@greenbone.net>
+
+	* CMakeLists.txt: Set USE_LIBXSLT by default.
+
 2014-10-02  Timo Pollmeier <timo.pollmeier@greenbone.net>
 
 	* src/html/classic/js/gsa_graphics_base.js (html_table_from_records):
